shadow fix on iphone

--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -17,7 +17,7 @@
     transition: all 0.3s;
 
     margin-bottom: 1.5rem;
-    box-shadow: 0 0.5rem 2rem rgba($color-black, 0.1);
+    box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.1);
 
     &:focus {
       outline: none;
